<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Semut</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_retypepassword">Retype Password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_birthday">Birthday</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Create New Account.</string>
    <string name="btn_link_forgot">Forgot Your Password?</string>
    <string name="btn_link_to_login">Back to Login</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_prelogin">Pre Login</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_front_map">FrontMapActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tag">Tag</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_tags">TagsActivity</string>
    <string name="submit">Submit</string>
    <string name="title_activity_taxi">TaxiActivity</string>
    <string name="title_activity_publictrans">PublictransActivity</string>
    <string name="title_activity_cctv">CctvActivity</string>
    <string name="title_activity_barcode">BarcodeActivity</string>
    <string name="title_activity_cctv_player">CctvPlayerActivity</string>
    <string name="title_activity_taxi_order">TaxiOrderActivity</string>
    <string name="title_activity_taxi_order_list">TaxiOrderListActivity</string>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="title_activity_search_friend">SearchFriendActivity</string>
    <string name="title_activity_taxi_order_history">TaxiOrderHistoryActivity</string>
    <string name="title_activity_map_filter">MapFilterActivity</string>
    <string name="facebook_app_id">740525679328657</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_front">FrontActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_test_drawer">TestDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>